Storing user input and preparing connecting to MongoDB
1. Created a form for a user to enter the teams.

2. Added functionality buttons to the form.

3. Made the submit button store the entered teams locally.

4. Coded index.js to establish a connection with the cloud hosted MongoDB server.

--- a/views/teams_list.ejs
+++ b/views/teams_list.ejs
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
+    <script src="/scripts/teams_list.js"></script>
 
     <title>Tournament Bracket Manager</title>
 </head>
@@ -17,7 +18,23 @@
     </header>
 
     <article>
-        <p> lorem ipsum dolor </p>
+        <p> 
+            <form action="/submit" method="post">
+                <% for (let i = 1; i <= 8; i++) { %>
+                    <label for="team<%= i %>">Team <%= i %></label>
+                    <input class="field" type="text" name="team<%= i %>" size="32">
+                <% } %> <!--Code suggestion by ChatGPT--> 
+
+                <input class = "button" type="reset" value="Clear">
+
+                <button type = "button" id = "randomize">Randomize</button>
+
+                <button type="submit">Load</button>
+
+                
+               
+            </form>
+        </p>
     </article>
 
     <footer>
@@ -25,7 +42,7 @@
         <a href="https://github.com/Abdullah-Haddad">My Github</a>
         <br>
         <address>
-            <p>Email: [emails]</p>
+            <p>Emails: [emails]</p>
         </address>
     </footer>
 
