--- a/views/index.html
+++ b/views/index.html
@@ -6,9 +6,25 @@
     
     <title>Tournament Bracket Manager</title>
 </head>
+
+
 <body>
 
-    
+    <!--Left Side of Web Page-->
+    <header class="header">
+        <h1>Tournament Bracker Manager</h1>
+
+
+    <!--Navagation Bar-->
+    <nav class="navbar">
+        <a href="">Login</a>
+        <a href="">Home</a>
+        <a href="">lorem</a>
+        <a href="">lorem</a>
+    </nav>
+
+    </header>
+
     
 </body>
 </html>
