Added more updates to landing page

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,7 +13,7 @@
 
     <header>
         <h1>
-            Home
+            Tournament Bracket Manager
         </h1>
     </header>
 
@@ -23,7 +23,7 @@
 
     <footer>
         <p>&copy; [Names] 2023 </p>
-        <a href="https://github.com/Abdullah-Haddad">My Github</a>
+        <a href="https://github.com/Abdullah-Haddad" >My Github <box-icon type='logo' name='github'></box-icon></a>
         <br>
         <address>
             <p>Email: [emails]</p>
