--- a/views/index.html
+++ b/views/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../public/style.css">
     
-    <title>Tournament Bracket Manager</title>
+    <title>TBM</title>
 </head>
 
 
@@ -19,11 +20,35 @@
     <nav class="navbar">
         <a href="">Login</a>
         <a href="">Home</a>
-        <a href="">lorem</a>
-        <a href="">lorem</a>
+        <a href="">About</a>
+        <a href="">About</a>
     </nav>
 
     </header>
+
+    <!--Main Components of the home page-->
+    <div class="content">
+        <div class="textbox">
+            <h2>Welcome to the Basketball Tournment Manager</h2>
+            <h3>Your Gateway to Seamless Tournament Management <br> Where you Empower Your Team, Elevate Your Tournaments!</h3>
+            <div class="btn-box">
+                <a href="">Sign Up Now</a>
+                <a href=""> Get Started</a>
+            </div>
+        </div>
+        
+    </div>
+
+
+    <!--Footer of Webpage-->
+    <footer>
+        <p>&copy; [Names] 2023 </p>
+        <a href="https://github.com/Abdullah-Haddad">My Github</a>
+        <br>
+        <address>
+            <p>Email: [emails]</p>
+        </address>
+    </footer>
 
     
 </body>
