--- a/public/style.css
+++ b/public/style.css
@@ -1,14 +1,116 @@
+@import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@500&family=Raleway:wght@300&family=Ubuntu&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Raleway', sans-serif;
 }
 
 
 body {
-    background-color: white;
+    background-color:whitesmoke;
     color: black;
+
 
 }
 
+.header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 20px 10%;
+    background-color: #d21404;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 100;
+}
+
+.navbar a { 
+    font-size: 18px;
+    color: white;
+    text-decoration: none;
+    font-weight: 500;
+    margin-left: 35px;
+    transition: .4s;
+}
+
+.navbar a:hover,
+.navbar a.active {
+    color: gold;
+}
+
+.content{
+    display: flex;
+    align-items: center;
+    height:100vh;
+    padding: 0 10%;
+    background: url('/public/img/knight.png') no-repeat;
+    background-size: 45%;
+    background-repeat: no-repeat;
+    background-position: right;
+}
+
+
+.textbox {
+    max-width: 650px;
+}
+
+.textbox h1 {
+    font-size: 56px;
+    font-weight: 700;
+    font-family: 'Pixelify Sans', 'Ubuntu', sans-serif;
+    line-height: 1.2;
+}
+
+.textbox h2 {
+    margin: 10px 10px 0 0 ;
+    font-size: 35px;
+    font-weight: 700;
+    color: gold;
+}
+
+.textbox p {
+    margin-top: 10px;
+    font-size: 20px;
+    font-weight: 700;
+}
+
+.btn-box {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 15px;
+    width: 345px;
+    height: 50px;
+
+}
+
+.btn-box a {
+    font-family: 'Ubuntu', sans-serif;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 150px;
+    height: 100%;
+    background-color: transparent;
+    border: 2px solid gold;
+    border-radius: 8px;
+    font-size: 20px;
+    color: black;
+    text-decoration: none;
+    font-weight: 600;
+    letter-spacing: 1px;
+}
+
+.btn-box a:hover{
+    color: #d21404;
+    transition: .2s;
+}
+
+footer {
+    text-align: center;
+    color: black;
+}
 
