--- a/views/index.html
+++ b/views/index.html
@@ -13,7 +13,10 @@
 
     <!--Left Side of Web Page-->
     <header class="header">
-        <h1>Tournament Bracker Manager</h1>
+        <a href="" class="logo">
+            <img src="../public/img/trophy.png" alt="Image of a Gold trophy" width="65px">
+        </a>
+        
 
 
     <!--Navagation Bar-->
@@ -21,7 +24,7 @@
         <a href="">Login</a>
         <a href="">Home</a>
         <a href="">About</a>
-        <a href="">About</a>
+        <a href="">Use</a>
     </nav>
 
     </header>
@@ -29,21 +32,25 @@
     <!--Main Components of the home page-->
     <div class="content">
         <div class="textbox">
-            <h2>Welcome to the Basketball Tournment Manager</h2>
-            <h3>Your Gateway to Seamless Tournament Management <br> Where you Empower Your Team, Elevate Your Tournaments!</h3>
+            <h1>Welcome To The Tournament Bracket Manager</h1>
+            <h2>Your Gateway to Seamless Tournament Management</h3>
+            <p>Here, users can input eight teams, and upon submission, the system generates matchups, presenting an organized set of teams ready to compete in the tournament.</p>
             <div class="btn-box">
-                <a href="">Sign Up Now</a>
-                <a href=""> Get Started</a>
+                <a href="#">Sign Up Now</a>
+                <a href="#"> Get Started</a>
             </div>
         </div>
         
     </div>
 
 
+
     <!--Footer of Webpage-->
     <footer>
-        <p>&copy; [Names] 2023 </p>
-        <a href="https://github.com/Abdullah-Haddad">My Github</a>
+        <p>&copy; <strong>Group 25</strong> 2023</p>
+        <a href="https://github.com/Abdullah-Haddad/Tournament_Bracket_Manager.git" target="_blank">
+            <img src="../public/img/github-mark.png" alt="github logo" width="24px">
+        </a>
         <br>
         <address>
             <p>Email: [emails]</p>
