--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../public/style.css">
+    <link rel="stylesheet" href="/public/style.css">
     
     <title>TBM</title>
 </head>
@@ -14,17 +14,17 @@
     <!--Left Side of Web Page-->
     <header class="header">
         <a href="" class="logo">
-            <img src="../public/img/trophy.png" alt="Image of a Gold trophy" width="65px">
+            <img src="/img/trophy.png" alt="Image of a Gold trophy" width="65px">
         </a>
         
 
 
     <!--Navagation Bar-->
     <nav class="navbar">
-        <a href="">Login</a>
-        <a href="">Home</a>
-        <a href="">About</a>
-        <a href="">Use</a>
+        <a href="#">Login</a>
+        <a href="tournament_bracket.ejs">Bracket</a>
+        <a href="#">About</a>
+        <a href="#">End</a>
     </nav>
 
     </header>
