--- a/views/tournament_bracket.ejs
+++ b/views/tournament_bracket.ejs
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-
+    <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script src="/public/Js/tournament_bracket.js"></script>
     <title>Tournament Bracket Manager</title>
 </head>
 
@@ -12,13 +13,9 @@
 
     <header>
         <h1>
-            Tournament Bracket Graphic
+            Tournament Bracket
         </h1>
     </header>
-
-    <article>
-        <p> lorem ipsum dolor sit amet </p>
-    </article>
 
     <footer>
         <p>&copy; [Names] 2023 </p>
